@@ -11,7 +11,7 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Ovidiu Ionescu")]
 [assembly: AssemblyProduct("VSDebugPro")]
-[assembly: AssemblyCopyright("©  Copyright 2012 - 2021 Ovidiu Ionescu")]
+[assembly: AssemblyCopyright("©  Copyright Ovidiu Ionescu")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 [assembly: ComVisible(false)]
@@ -28,5 +28,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Revision and Build Numbers
 // by using the '*' as shown below:
 
-[assembly: AssemblyVersion("3.4.0.0")]
-[assembly: AssemblyFileVersion("3.4.0.0")]
+[assembly: AssemblyVersion("3.4.0.1")]
+[assembly: AssemblyFileVersion("3.4.0.1")]
